# ES-Grupo4-Backend

./: .gitignore  README.md  alembic.ini  docker-compose.yml  dockerfile  dump.sql  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yaml
.scannerwork/: report-task.txt
alembic/: env.py
alembic/versions/: 54b1d8374afa_init.py  8cff6910d7dc_init.py
app/: main.py
app/core/: historico_acoes.py  permissoes.py  seguranca.py
app/models/: db_setup.py  employee.py  models.py
app/repository/: database.py
app/routers/: auth.py  cliente.py  compra.py  employee.py  funcionario.py  historico_acoes.py  informacoes_gerais.py  relatorio.py
app/schemas/: acoes.py  auth.py  cliente.py  compra.py  funcionario.py  informacoes_gerais.py  relatorio.py
app/utils/: validacao.py
tests/: test_auth.py  test_cliente.py  test_compra.py  test_funcionario.py  test_informacoes_gerais.py  test_relatorio.py
