[project]
name = "es"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "sqlalchemy>=2.0.41",
    "python-jose[cryptography]",
    "validate_docbr",
    "polars>=1.32.0",
    "passlib[bcrypt]"
]

["mypy-passlib.*"]
ignore_missing_imports = true